Fixes mobile issues in dark mode

--- a/src/components/Feedback/styles.module.scss
+++ b/src/components/Feedback/styles.module.scss
@@ -4,19 +4,15 @@
   font-size: 1.1em;
   text-align: center;
   margin-top: 3em;
+  margin-bottom: 0;
 }
 
 .form {
-  border-top: 1px #E2E9F7 solid;
-  margin-top: 2.5em;
+  margin-top: 1.5em;
   margin-bottom: -3em;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.formExpanded {
-  border-bottom: 1px #E2E9F7 solid;
 }
 
 .radio {
@@ -108,5 +104,6 @@
 .specificQuestion {
   display: block;
   text-align: center;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
+  margin-top: .5em;
 }
