--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,8 @@
   --ifm-navbar-link-color: white;
   --ifm-navbar-padding-horizontal: 24px;
 
+  --ifm-navbar-sidebar-background-color: white;
+
   --ifm-toc-border-color: #3d6bc726;
 
   --ifm-font-color-base: #{$navy};
@@ -29,10 +31,12 @@
 
   --ifm-menu-link-padding-horizontal: 16px;
   --ifm-menu-link-padding-vertical: 5px;
-  --ifm-menu-link-sublist-icon: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="currentColor" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
-  --ifm-menu-link-sublist-icon-active: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgb(255,255,255)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
+  --ifm-menu-link-sublist-icon-dark: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgb(26,38,62)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
+  --ifm-menu-link-sublist-icon-light: url('data:image/svg+xml;utf8,<svg alt="Arrow" xmlns="http://www.w3.org/2000/svg" width="16px" height="16px" viewBox="0 0 24 24"><path fill="rgb(255,255,255)" d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"></path></svg>');
   --ifm-menu-color: #{$navy};
-  --ifm-menu-color-active: #{$navy};
+  --ifm-menu-color-active: #ffffff; 
+  --ifm-menu-color-background-active: #{$navy}; // Okteto addition
+  --ifm-menu-color-background-active-hover: #{$light-navy}; // Okteto addition
 
   --ifm-table-border-color: #{rgba($navy, .2)};
   --ifm-table-font-size: 16px;
@@ -42,12 +46,12 @@
 
   --ifm-blockquote-color: var(--ifm-font-color-base);
   --ifm-blockquote-font-size: 18px;
+  --ifm-blockquote-padding-vertical: 8px;
+  --ifm-blockquote-padding-horizontal: 24px;
 
   --ifm-font-family-monospace: #{$code-font};
   --ifm-code-background: #{$light-blue};
-  --ifm-code-font-size: 18px;
-
-  --ifm-footer-background-color: #{$darker-blue};
+  --ifm-code-font-size: 16px;
 
   --ifm-tabs-padding-vertical: 12px;
 }
@@ -56,20 +60,30 @@
 html[data-theme='dark'] {
   --ifm-font-color-base: white;
   --ifm-heading-color: white;
+  
   --ifm-menu-color: white;
-  --ifm-menu-color-active: var(--ifm-color-primary);
+  --ifm-menu-color-active: white;
+
   --ifm-background-color: #15181E;
   --ifm-hover-overlay: #1e232c;
+  --ifm-navbar-sidebar-background-color: #15181E;
 
-  .menu__list-item-collapsible--active .menu__caret:before {
-    background: var(--ifm-menu-link-sublist-icon) 50% / 1.3rem 1.3rem;
+  .menu__list-item-collapsible--active,
+  .menu__list-item-collapsible--active:hover  {
+    .menu__caret:before {
+      background: var(--ifm-menu-link-sublist-icon-dark) 50% / 1.3rem 1.3rem;
+    }
+  }
+
+  .footer {
+    --ifm-footer-background-color: #0e1114;
   }
 }
 
 html, body {
   font-family: $normal-font;
   font-size: 18px;
-  letter-spacing: -.3px;
+  letter-spacing: -.02rem;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
 }
@@ -80,84 +94,6 @@ table {
 
 h1, h2, h3, h4, h5, h6 {
   position: relative;
-}
-
-.navbar {
-  &__title {
-    display: none;
-  }
-
-  &__brand {
-    max-height: 28px;
-    margin-right: 0.2rem;
-  }
-
-  &__item {
-    svg {
-      display: none;
-    }
-  }
-
-  .clean-btn {
-    color: var(--ifm-navbar-link-color);
-
-    &:hover {
-      background-color: $light-navy;
-    }
-  }
-}
-
-.menu {
-  font-size: 17px;
-  font-weight: 400;
-  height: 100%;
-  padding: 12px 0;
-  margin: 0;
-  padding-right: 0;
-
-  .menu__caret:before {
-    background: var(--ifm-menu-link-sublist-icon) 50% / 1.3rem 1.3rem;
-  }
-
-  .menu__link--sublist-caret:after {
-    background: var(--ifm-menu-link-sublist-icon) 50% / 1.3rem 1.3rem;
-  }
-
-  .menu__list-item-collapsible--active {
-    background: $navy;
-
-    .menu__link--active {
-      color: white;
-    }
-
-    .menu__caret:hover {
-      background: $light-navy;
-    }  
-
-    .menu__caret:before {
-      background: var(--ifm-menu-link-sublist-icon-active) 50% / 1.3rem 1.3rem;
-    }
-  }
-
-  .menu__link {
-    letter-spacing: -.5px;
-
-    &.menu__link--active {
-      font-weight: bold;
-
-      &:not(.menu__link--sublist) {
-        border-radius: 3px;
-        color: white;
-        background: $navy;
-      }
-    }
-  }
-
-  .menu__list-item:not(.menu__list-item--collapsed) {
-    .menu__list-item:last-child {
-      margin-bottom: 12px;
-    }
-  }
 }
 
 .container {
@@ -231,15 +167,86 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.menu {
+  font-size: 17px;
+  font-weight: 400;
+  height: 100%;
+  padding: 12px 0;
+  margin: 0;
+  padding-right: 0;
+}
+
+.menu__list-item-collapsible--active,
+.menu__list-item-collapsible--active:hover  {
+  background-color: var(--ifm-menu-color-background-active);
+
+  .menu__link.menu__link--sublist.menu__link--active {
+    color: var(--ifm-menu-color-active);
+  }
+
+  .menu__caret:hover {
+    background-color: var(--ifm-menu-color-background-active-hover);
+  }
+
+  .menu__caret:before {
+    background: var(--ifm-menu-link-sublist-icon-light) 50% / 1.3rem 1.3rem;
+  }
+}
+
+.menu__link--sublist-caret:after,
+.menu__caret:before {
+  background: var(--ifm-menu-link-sublist-icon-dark) 50% / 1.3rem 1.3rem;
+}
+
+.menu__link.menu__link--sublist.menu__link--active {
+  color: var(--ifm-menu-color);
+}
+
+a.menu__link svg {
+  display: none;
+}
+
+.navbar__brand {
+  max-height: 28px;
+  margin-right: 0.2rem;
+}
+
+.navbar__item {
+  svg {
+    display: none;
+  }
+}
+
+.navbar .clean-btn {
+  color: var(--ifm-navbar-link-color);
+
+  &:hover {
+    background-color: $light-navy;
+  }
+}
+
+.navbar-sidebar__close {
+  color: var(--ifm-navbar-link-color);
+}
+
+.navbar-sidebar__close.clean-btn:hover {
+  --ifm-color-emphasis-600: var(--ifm-navbar-link-color);
+  background-color: transparent;
+}
+
+.navbar-sidebar__item.menu {
+  background-color: var(--ifm-navbar-sidebar-background-color);
+  padding: 0;
+}
+
+
 .footer {
+  --ifm-footer-background-color: #{$darker-blue};
+
   &__item {
     a svg {
       display: none;
     }
-  }
-
-  &.footer--dark {
-    --ifm-footer-background-color: #{$darker-blue};
   }
 }
 
@@ -313,21 +320,13 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
-@media (max-width: 996px) {
-  .searchBox_qEbK,
-  div[class*="searchBox"] {
-    position: relative;
-    margin-left: auto;
-  }
-}
-
-@media (max-width: 500px) {
-  .navbar__items--right {
-    display: none;
-  }
-}
-
-.GetFreeTrialButton {
+a.Button.GetFreeTrialButton {
   order: 12;
   margin-left: .8rem;
+}
+
+@media (max-width: 996px) {
+  a.Button.GetFreeTrialButton {
+    display: none;
+  }
 }
